--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -1,31 +1,5 @@
 spring:
   application:
-    name: activityservice
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/fitnessactivity
-      database: fitnessactivity
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-
-server:
-  port: 8086
-
-eureka:
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${server.port}
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
-rabbitmq:
-  exchange:
-    name: fitness.exchange
-  queue:
-    name: activity.queue
-  routing:
-    key: activity.tracking
+    name: activity-service
+  config:
+    import: optional:configserver:http://localhost:8888
