Add Gateway routes and properties to Config Server

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -3,14 +3,21 @@ spring:
     name: api-gateway
   cloud:
     gateway:
-#      discovery:
-#        locator:
-#          enabled: true
       routes:
         - id: userservice
           uri: lb://userservice
           predicates:
             - Path=/api/users/**
+
+        - id: activityservice
+          uri: lb://activityservice
+          predicates:
+            - Path=/api/activities/**
+
+        - id: aiservice
+          uri: lb://aiservice
+          predicates:
+            - Path=/api/recommendations/**
 
 eureka:
   instance:
